добавлен вывод статей на главную

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -8,24 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello</title>
     <link rel="stylesheet" href="{% static "css/style.css" %}">
-    <style type="text/css">
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            color: #444444;
-        }
-        .container {
-            margin: 0 auto;
-            width: 100%;
-            max-width: 900px;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
 <div class="container">
-    <p>This is my first Django project!</p>
-    <p>Hello World!</p>
+    <h1> My First Blog</h1>
+    {% for article in articles %}
+    <h3>{{ article.pk }}. {{ article.title }}</h3>
+        <p>{{ article.author }} | {{ article.created_at }}</p>
+       <div> {{ article.text }}</div>
+
+    {% endfor %}
+<a href="/articles/add/">Добавить статью</a>
+
+
 </div>
 </body>
 </html>
