--- a/source/webapp/templates/article_view.html
+++ b/source/webapp/templates/article_view.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>View</title>
 </head>
 <body>
-    <h1>Future article:</h1>
-    <h2>{{ title }}</h2>
-    <p>{{ content }}</p>
-    <p>By: {{ author }}</p>
+    <p><a href="/">На главную</a></p>
+    <h1>Article:</h1>
+    <h2>{{ article.title }}</h2>
+    <p>{{ article.text }}</p>
+    <p>By: {{ article.author }}</p>
 </body>
 </html>
-
