добавлено переменная pk

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -16,7 +16,7 @@
     <h3>{{ article.pk }}. {{ article.title }}</h3>
         <p>{{ article.author }} | {{ article.created_at }}</p>
        <div> {{ article.text }}</div>
-    <p><a href="/article/?pk={{ article.pk }}">Подробнее...</a></p>
+    <p><a href="/article/{{ article.pk }}/">Подробнее...</a></p>
     <hr>
     {% endfor %}
 <a href="/articles/add/">Добавить статью</a>
