--- a/source/webapp/templates/article_create.html
+++ b/source/webapp/templates/article_create.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +7,8 @@
 </head>
 <body>
 <h1>Create Article</h1>
-<p><a href="/">На главную</a></p>
-<form action="/articles/add/" method="post">
+<p><a href="{% url "index" %}">На главную</a></p>
+<form action="{% url "article_create" %}" method="post">
     {% csrf_token %}
    
     <label>Title:</label><br/>
