--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -12,6 +12,7 @@
 <body>
 <div class="container">
     <h1> My First Blog</h1>
+<a href="{% url "article_create" %}">Добавить статью</a>
     {% for article in articles %}
     <h3>{{ article.pk }}. {{ article.title }}</h3>
         <p>{{ article.author }} | {{ article.created_at }}</p>
@@ -19,7 +20,7 @@
     <p><a href="/article/{{ article.pk }}/">Подробнее...</a></p>
     <hr>
     {% endfor %}
-<a href="/articles/add/">Добавить статью</a>
+<a href="{% url "article_create" %}">Добавить статью</a>
 
 
 </div>
