--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,23 +1,8 @@
-{% load staticfiles %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello</title>
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
-</head>
-<body>
-<div class="container">
-<nav class="navbar">
-   <div class="container">
-       <ul class="menu">
-           <li><a href="{% url 'article_create' %}">Add Article</a></li>
-       </ul>
-   </div>
-</nav>
+{% extends 'base.html' %}
+{% block title %}Hello{% endblock %}
+
+
+{% block content %}
     <h1> My First Blog</h1>
     {% for article in articles %}
     <h3>{{ article.pk }}. {{ article.title }}</h3>
@@ -27,8 +12,5 @@
     <hr>
     {% endfor %}
 
+{% endblock %}
 
-
-</div>
-</body>
-</html>
