--- a/source/webapp/templates/article_view.html
+++ b/source/webapp/templates/article_view.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}View{% endblock %}
-
+{% block menu %}
+<li><a href="{% url 'article_update' article.pk %}">Update</a></li>
+{% endblock %}
 
 {% block content %}
     <h1>Article:</h1>
