--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -8,7 +8,7 @@
     <h3>{{ article.pk }}. {{ article.title }}</h3>
         <p>{{ article.author }} | {{ article.created_at }}</p>
        <div> {{ article.text }}</div>
-    <p><a href="/article/{{ article.pk }}/">Подробнее...</a></p>
+    <p><a href="{% url 'article_update' article.pk %}">Update</a></p>
     <hr>
     {% endfor %}
 
