добавлено форма статьи и использована на странице создания статьи. Добавлен частичный шаблон. чЕРЕЗ  форму добавлена валидация для создания статьи

--- a/source/webapp/static/css/style.css
+++ b/source/webapp/static/css/style.css
@@ -42,4 +42,10 @@ body {
     color: #ffc122;
     text-decoration: underline;
 }
+.error {
+    font-weight: bold;
+    color: red;
+    margin-top: 2px;
+
+}
 
