--- a/source/webapp/templates/article_update.html
+++ b/source/webapp/templates/article_update.html
@@ -9,17 +9,20 @@
 {% block content %}
     <h1>Update Article</h1>
 
-    <form action="{% url "article_update" article.pk%}" method="post">
+    <form action="{% url "article_update" article.pk %}" method="post">
         {% csrf_token %}
 
         <label>Title:</label><br/>
-        <input type="text" name="title" value="{{ article.title }}"/><br/>
+        <input type="text" name="title" value="{{ article.title }}" required/><br/>
+        {% if errors.title %}<p class="error">{{ errors.title }}</p>{% endif %}
 
         <label>Text:</label><br/>
-        <textarea name="text">{{ article.text }}</textarea><br/>
+        <textarea name="text" required>{{ article.text }}</textarea><br/>
+        {% if errors.text %}<p class="error">{{ errors.text }}</p>{% endif %}
 
         <label>Author:</label><br/>
-        <input type="text" name="author" value="{{ article.author }}"/><br/>
+        <input type="text" name="author" value="{{ article.author }}" required/><br/>
+        {% if errors.author %}<p class="error">{{ errors.author }}</p>{% endif %}
 
 
 
